<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Settings_Home">

    <TextView
        android:id="@+id/textView_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/app_name"
        android:textAppearance="@style/header20_bold_blue"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="26dp"/>

    <TextView
        android:id="@+id/textView_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/settings_home_title"
        android:textAppearance="@style/header30_bold_black"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="63dp"/>

    <ImageButton
        android:id="@+id/imageButton_buttonBack"
        android:contentDescription="@string/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_back_def"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="33.5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/textView_settings"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imageButton_notification"
                android:contentDescription="@string/settings_home_notif_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_button4"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"/>

            <ImageView
                android:id="@+id/imageView_notificationIcon"
                android:contentDescription="@string/settings_home_notif_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_bell_def"
                android:layout_alignStart="@+id/imageButton_notification"
                android:layout_alignTop="@+id/imageButton_notification"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id="@+id/textView_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/imageButton_notification"
                android:layout_alignTop="@+id/imageButton_notification"
                android:layout_marginTop="18dp"
                android:layout_marginStart="50dp"
                android:text="@string/settings_notif_title"
                android:textAppearance="@style/text18_bold_gray"/>

        </RelativeLayout>

        <!--
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imageButton_alarm"
                android:contentDescription="Settings: Alarms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_button4"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"/>

            <ImageView
                android:id="@+id/imageView_alarmIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_clock_def"
                android:layout_alignStart="@+id/imageButton_alarm"
                android:layout_alignTop="@+id/imageButton_alarm"
                android:layout_marginStart="16dp"
                android:layout_marginTop="18dp"
                />

            <TextView
                android:id="@+id/textView_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/imageButton_alarm"
                android:layout_alignTop="@+id/imageButton_alarm"
                android:layout_marginTop="18dp"
                android:layout_marginStart="50dp"
                android:text="Alarms"
                android:textAppearance="@style/text18_bold_gray"/>

        </RelativeLayout>
        -->

    </LinearLayout>

</RelativeLayout>